--- a/_posts/2012-08-29-17-19-18.md
+++ b/_posts/2012-08-29-17-19-18.md
@@ -10,7 +10,7 @@ description:  星期三
 下面列出我的一个配置文件。
 
 
-[code];;支持中文显示
+<code>;;支持中文显示
 (set-language-environment `chinese-GB)
 ;;; uncomment this line to disable loading of &quot;default.el&quot; at startup
 ;; (setq inhibit-default-init t)
@@ -91,4 +91,4 @@ description:  星期三
 (add-hook &#039;cc-mode-hook &#039;display-line-number-mode)[/code]
 有些配置我也不清楚，字体的配置虽然不好看，但已经是我系统上比较好的一个字体，实在没有更好的了。
 颜色和verilog，sv，vera的语法支持需要插件，一并附上。
-[file][attach]13[/attach][/file]
+<\code>
