--- a/_posts/2012-09-12-17-21-29.md
+++ b/_posts/2012-09-12-17-21-29.md
@@ -9,6 +9,6 @@ VNC访问时不能切换SCIM输入法的解决办法
 	在远程服务器上安装scim后，发现还是不能使用中文输入法。发现是vnc的问题，解决办法。
 
 
-1）修改.vnc/xstartup文件，在最后一行加入：scim -d，意思为打开SCIM输入法
-2）修改scim输入法的快捷键，因为默认打开输入法的快捷键为ctrl+space，与本地机器上（搜狗输入法）切换输入法的快捷键冲突，系统会先接收到本地的命令，所以没办法使用默认快捷键打开输入法。将打开SCIM输入法的快捷键修改为Ctrl+Alt+Space。
-3）kill掉当前vnc viewer窗口，再打开。或者重新申请一个端口，登到远程linux服务器。scim可以使用了。
+1）修改`.vnc/xstartup`文件，在最后一行加入：`scim -d`，意思为打开SCIM输入法  
+2）修改scim输入法的快捷键，因为默认打开输入法的快捷键为`ctrl+space`，与本地机器上（搜狗输入法）切换输入法的快捷键冲突，系统会先接收到本地的命令，所以没办法使用默认快捷键打开输入法。将打开SCIM输入法的快捷键修改为Ctrl+Alt+Space。  
+3）kill掉当前vnc viewer窗口，再打开。或者重新申请一个端口，登到远程linux服务器。scim可以使用了。  
